BTWCT-1029: Navigation Component (Mobile) - L1 Navigation => Fix overlay visibility when clicking away from navigation

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -327,7 +327,6 @@ nav.cmp-navigation {
       transition-duration: 0.25s;
       transition-property: visibility, opacity;
       transition-delay: 0.25s, 0s;
-      pointer-events: none;
       
       @include mobile {
          display: none;
